# BACK_OFFICE_UPDATER

./: README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/cli/cli-utils/: commandOutput.ts
src/components/ui/: button.tsx  dialog.tsx  popover.tsx  scroll-area.tsx  select.tsx
src/features/404/: NotFoundSection.tsx
src/features/cost-explorer/: CostExplorer.tsx  CostExplorerSection.tsx
src/features/dashboard/: CardDownloads.tsx  CountDownloads.tsx  Dashboard.tsx  DashboardSection.tsx  WelcomeDashboard.tsx
src/features/downloads/: DownloadSection.tsx  Downloads.tsx
src/features/metrics/: LineChartDasboard.tsx  Metrics.tsx  MetricsDashboard.tsx  MetricsSection.tsx  PieChartDashboard.tsx
src/features/settings/: ConfigSettings.tsx  SettingsSection.tsx
src/features/stacks/: StackSection.tsx
src/features/uploads/: DialogConfirmFile.tsx  FIleGroupCard.tsx  ProgressList.tsx  UploadFileSection.tsx  (+1 more)
src/helpers/: OpenUploadDialog.tsx  parseS3UploadProgress.tsx
src/hooks/: useAWSSession.tsx  useDialogState.tsx  useUploadProgressStore.tsx
src/layouts/: AppLayout.tsx  SectionPage.tsx
src/lib/: awsRegionByContinent.ts
src/pages/: CostExplorerPage.tsx  DashboardPage.tsx  DownloadPage.tsx  MetricsPage.tsx  NotFoundPage.tsx  SettingsPage.tsx  StackPage.tsx  UploadPage.tsx
src/routes/: AppRoutes.tsx  SidebarRoutes.tsx
src/store/: UseSelectedFilesStore.tsx  useSessionStore.tsx
src/updater/: updater.ts
(+21 files in other folders)
