[package]
name = "brender-studio"
version = "0.1.0"
description = "Dashboard Back Office Brender Studio"
authors = ["Dashboard Brender Studio", "jer-nc", "david-blg"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "http-request", "notification-all", "updater", "process-all", "path-all", "dialog-all", "clipboard-all", "fs-all", "shell-all", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
# tauri-plugin-context-menu = "0.7.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
